--- a/.github/workflows/unstable.yml
+++ b/.github/workflows/unstable.yml
@@ -1,8 +1,8 @@
-name: test
+name: unstable
 
 on: 
   push:
-    branches-ignore:
+    branches:
       - 'master'
     tags-ignore: 
       - '*'
@@ -37,12 +37,12 @@ jobs:
 #            # or
 #            #api-token: ${{ secrets.CODACY_API_TOKEN }}
 #            coverage-reports: coverage.xml
-#        - name: Deploy Test PyPI
-#          if: startsWith(github.ref, 'refs/tags') != true
-#          uses: pypa/gh-action-pypi-publish@master
-#          with:
-#            password: ${{ secrets.test_pypi_token }}
-#            repository_url: https://test.pypi.org/legacy/
+        - name: Deploy Test PyPI
+          if: startsWith(github.ref, 'refs/tags') != true
+          uses: pypa/gh-action-pypi-publish@master
+          with:
+            password: ${{ secrets.test_pypi_token }}
+            repository_url: https://test.pypi.org/legacy/
 #        - name: Upload Github Pages
 #          uses: JamesIves/github-pages-deploy-action@4.1.5
 #          with:
