--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -1,14 +1,11 @@
-name: test
+name: stable
 
 on: 
   push:
-    branches-ignore:
-      - 'master'
-    tags-ignore: 
+    tags: 
       - '*'
-
 jobs:
-    test:
+    publish:
       runs-on: ubuntu-latest
       container:
         image: apnpucky/ubuntu-pip-lhapdf
@@ -19,9 +16,9 @@ jobs:
           with:
             fetch-depth: "0"
         - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
-        - name: Build
+        - name: Build 
           run: make build
-        - name: Install
+        - name: Install 
           run: make install
 #        - name: Tests
 #          run: make test
@@ -37,15 +34,14 @@ jobs:
 #            # or
 #            #api-token: ${{ secrets.CODACY_API_TOKEN }}
 #            coverage-reports: coverage.xml
-#        - name: Deploy Test PyPI
-#          if: startsWith(github.ref, 'refs/tags') != true
-#          uses: pypa/gh-action-pypi-publish@master
-#          with:
-#            password: ${{ secrets.test_pypi_token }}
-#            repository_url: https://test.pypi.org/legacy/
-#        - name: Upload Github Pages
+        - name: Deploy PyPI
+          if: startsWith(github.ref, 'refs/tags')
+          uses: pypa/gh-action-pypi-publish@master
+          with:
+            password: ${{ secrets.pypi_token }}
+#        - name: Deploy Github Pages
 #          uses: JamesIves/github-pages-deploy-action@4.1.5
 #          with:
 #            BRANCH: gh-pages # The branch the action should deploy to.
 #            FOLDER: docs/build/html # The folder the action should deploy.
-#            target-folder: test
+#            clean-exclude: test/
