--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches-ignore:
       - 'master'
+      - 'stable'
     tags-ignore: 
       - '*'
 
@@ -38,12 +39,13 @@ jobs:
 #            #api-token: ${{ secrets.CODACY_API_TOKEN }}
 #            coverage-reports: coverage.xml
 #        - name: Deploy Test PyPI
-#          if: startsWith(github.ref, 'refs/tags') != true
+#          if: github.event_name != 'pull_request'
 #          uses: pypa/gh-action-pypi-publish@master
 #          with:
 #            password: ${{ secrets.test_pypi_token }}
 #            repository_url: https://test.pypi.org/legacy/
 #        - name: Upload Github Pages
+#          if: github.event_name != 'pull_request'
 #          uses: JamesIves/github-pages-deploy-action@4.1.5
 #          with:
 #            BRANCH: gh-pages # The branch the action should deploy to.
