--- a/.github/workflows/unstable.yml
+++ b/.github/workflows/unstable.yml
@@ -16,6 +16,7 @@ jobs:
         - uses: actions/checkout@v3
           with:
             fetch-depth: 0
+        - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
         - name: Build
           run: make build
         - name: Install
