--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -13,6 +13,8 @@ jobs:
       container:
         image: apnpucky/ubuntu-pip-lhapdf
       steps:
+        - name: work around permission issue
+          run: git config --global --add safe.directory /__w/${{ github.event.repository.name }}/${{ github.event.repository.name }}
         - uses: actions/checkout@v3
           with:
             fetch-depth: 0
