--- a/.github/workflows/ff-comment.yml
+++ b/.github/workflows/ff-comment.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - run: git merge-base --is-ancestor ${{ github.event.pull_request.head.ref }} ${{ github.event.pull_request.base.ref }}
       - uses: mshick/add-pr-comment@v1
         with:
