--- a/.github/workflows/ff-comment.yml
+++ b/.github/workflows/ff-comment.yml
@@ -9,8 +9,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - run: git fetch origin ${{ github.event.pull_request.head.ref }}
-      - run: git fetch origin ${{ github.event.pull_request.base.ref }}
+      - run: git fetch origin ${{ github.event.pull_request.head.ref }}:${{ github.event.pull_request.head.ref }}
+      - run: git fetch origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
       - run: git merge-base --is-ancestor ${{ github.event.pull_request.head.ref }} ${{ github.event.pull_request.base.ref }}
       - uses: mshick/add-pr-comment@v1
         with:
