--- a/.github/workflows/ff-comment.yml
+++ b/.github/workflows/ff-comment.yml
@@ -11,7 +11,7 @@ jobs:
           fetch-depth: 0
       - run: git fetch origin ${{ github.event.pull_request.head.ref }}:${{ github.event.pull_request.head.ref }}
       - run: git fetch origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
-      - run: git merge-base --is-ancestor ${{ github.event.pull_request.head.ref }} ${{ github.event.pull_request.base.ref }}
+      - run: git merge-base --is-ancestor ${{ github.event.pull_request.base.ref }} ${{ github.event.pull_request.head.ref }}
       - uses: mshick/add-pr-comment@v1
         with:
           message: |
