--- a/.github/workflows/ff-comment.yml
+++ b/.github/workflows/ff-comment.yml
@@ -3,6 +3,11 @@ name: Fast-Forward Comment
 on:
   pull_request:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
+
 jobs:
   test:
     runs-on: ubuntu-latest
