--- a/.github/workflows/ff-comment.yml
+++ b/.github/workflows/ff-comment.yml
@@ -3,6 +3,7 @@ name: Fast-Forward Comment
 on:
   pull_request:
 
+# avoid double tripple comments?
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
