--- a/.github/workflows/ff-label.yml
+++ b/.github/workflows/ff-label.yml
@@ -20,10 +20,10 @@ jobs:
       - run: git fetch origin ${{ github.event.pull_request.head.ref }}:${{ github.event.pull_request.head.ref }}
       - run: git fetch origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
       - uses: actions-ecosystem/action-add-labels@v1
-        if: ${{ git merge-base --is-ancestor github.event.pull_request.base.ref  github.event.pull_request.head.ref }}
+        if: git merge-base --is-ancestor ${{ github.event.pull_request.base.ref }}  ${{ github.event.pull_request.head.ref }}
         with:
           labels: fast-forward
       - uses: actions-ecosystem/action-remove-labels@v1
-        if: ${{ ! git merge-base --is-ancestor  github.event.pull_request.base.ref  github.event.pull_request.head.ref }}
+        if:  ! git merge-base --is-ancestor  ${{ github.event.pull_request.base.ref }}  ${{ github.event.pull_request.head.ref }}
         with:
           labels: fast-forward
