--- a/.github/workflows/ff-label.yml
+++ b/.github/workflows/ff-label.yml
@@ -10,7 +10,7 @@ concurrency:
 
 
 jobs:
-  test:
+  ff-add:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -19,11 +19,20 @@ jobs:
           fetch-depth: 0
       - run: git fetch origin ${{ github.event.pull_request.head.ref }}:${{ github.event.pull_request.head.ref }}
       - run: git fetch origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
+      - run: git merge-base --is-ancestor ${{ github.event.pull_request.base.ref }}  ${{ github.event.pull_request.head.ref }}
       - uses: actions-ecosystem/action-add-labels@v1
-        if: git merge-base --is-ancestor ${{ github.event.pull_request.base.ref }}  ${{ github.event.pull_request.head.ref }}
         with:
           labels: fast-forward
+  ff-rm:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - run: git fetch origin ${{ github.event.pull_request.head.ref }}:${{ github.event.pull_request.head.ref }}
+      - run: git fetch origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
+      - run: "! git merge-base --is-ancestor  ${{ github.event.pull_request.base.ref }}  ${{ github.event.pull_request.head.ref }}"
       - uses: actions-ecosystem/action-remove-labels@v1
-        if: "! git merge-base --is-ancestor  ${{ github.event.pull_request.base.ref }}  ${{ github.event.pull_request.head.ref }}"
         with:
           labels: fast-forward
