--- a/.github/workflows/ff-label.yml
+++ b/.github/workflows/ff-label.yml
@@ -19,20 +19,18 @@ jobs:
           fetch-depth: 0
       - run: git fetch origin ${{ github.event.pull_request.head.ref }}:${{ github.event.pull_request.head.ref }}
       - run: git fetch origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
-      - run: git merge-base --is-ancestor ${{ github.event.pull_request.base.ref }}  ${{ github.event.pull_request.head.ref }}
+      - run: |
+          git merge-base --is-ancestor ${{ github.event.pull_request.base.ref }}  ${{ github.event.pull_request.head.ref }}
+          if [[ $? ]]; then
+            echo "FFL=false" >> "$GITHUB_ENV"
+          else
+            echo "FFL=true" >> "$GITHUB_ENV"
+          fi
       - uses: actions-ecosystem/action-add-labels@v1
+        if: env.FFL == 'true' 
         with:
           labels: fast-forward
-  ff-rm:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - run: git fetch origin ${{ github.event.pull_request.head.ref }}:${{ github.event.pull_request.head.ref }}
-      - run: git fetch origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
-      - run: "! git merge-base --is-ancestor  ${{ github.event.pull_request.base.ref }}  ${{ github.event.pull_request.head.ref }}"
       - uses: actions-ecosystem/action-remove-labels@v1
+        if: env.FFL == 'false' 
         with:
           labels: fast-forward
