--- a/.github/workflows/ff-label.yml
+++ b/.github/workflows/ff-label.yml
@@ -20,7 +20,7 @@ jobs:
       - run: git fetch origin ${{ github.event.pull_request.head.ref }}:${{ github.event.pull_request.head.ref }}
       - run: git fetch origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
       - run: |
-          if [[ git merge-base --is-ancestor ${{ github.event.pull_request.base.ref }}  ${{ github.event.pull_request.head.ref }} ]]; then
+          if [[ $(git merge-base --is-ancestor ${{ github.event.pull_request.base.ref }}  ${{ github.event.pull_request.head.ref }}) ]]; then
             echo "FFL=false" >> "$GITHUB_ENV"
           else
             echo "FFL=true" >> "$GITHUB_ENV"
