--- a/.github/workflows/ff-label.yml
+++ b/.github/workflows/ff-label.yml
@@ -3,11 +3,10 @@ name: Fast-Forward Label
 on:
   pull_request:
 
-# avoid double tripple comments?
+# avoid running multiples
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
-
 
 jobs:
   ff-label:
