--- a/.github/workflows/ff-label.yml
+++ b/.github/workflows/ff-label.yml
@@ -1,7 +1,14 @@
 name: Fast-Forward Label
 
 on:
+  push:
+    branches:
+      - ${{ github.event.pull_request.head.ref }}
+      - ${{ github.event.pull_request.head.ref }}
   pull_request:
+    branches:
+      - ${{ github.event.pull_request.head.ref }}
+      - ${{ github.event.pull_request.head.ref }}
 
 # avoid running multiples
 concurrency:
