--- a/.github/workflows/ff-label.yml
+++ b/.github/workflows/ff-label.yml
@@ -13,6 +13,7 @@ concurrency:
 jobs:
   ff-label:
     runs-on: ubuntu-latest
+    if: github.event.issue.pull_request != ''
     steps:
       - name: Checkout
         uses: actions/checkout@v3
