--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -21,8 +21,8 @@ jobs:
           run: make build
         - name: Install
           run: make install
-#        - name: Tests
-#          run: make test
+        - name: Tests
+          run: make test
 #        - name: Build Sphinx
 #          working-directory: ./docs
 #          run: make html
