--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -25,11 +25,11 @@ jobs:
           run: make install
         - name: Tests
           run: make test
-#        - name: Build Sphinx
-#          working-directory: ./docs
-#          run: make html
-#        - name: Report Coveralls
-#          uses: AndreMiras/coveralls-python-action@develop
+        - name: Build Sphinx
+          working-directory: ./docs
+          run: make html
+        - name: Report Coveralls
+          uses: AndreMiras/coveralls-python-action@develop
 #        - name: Report Codacy
 #          uses: codacy/codacy-coverage-reporter-action@v1
 #          with:
@@ -42,9 +42,9 @@ jobs:
           uses: pypa/gh-action-pypi-publish@release/v1
           with:
             password: ${{ secrets.pypi_token }}
-#        - name: Deploy Github Pages
-#          uses: JamesIves/github-pages-deploy-action@4.1.5
-#          with:
-#            BRANCH: gh-pages # The branch the action should deploy to.
-#            FOLDER: docs/build/html # The folder the action should deploy.
-#            clean-exclude: test/
+        - name: Deploy Github Pages
+          uses: JamesIves/github-pages-deploy-action@4.1.5
+          with:
+            BRANCH: gh-pages # The branch the action should deploy to.
+            FOLDER: docs/build/html # The folder the action should deploy.
+            clean-exclude: test/
