--- a/.github/workflows/unstable.yml
+++ b/.github/workflows/unstable.yml
@@ -25,11 +25,11 @@ jobs:
           run: make install
         - name: Tests
           run: make test
-#        - name: Build Sphinx
-#          working-directory: ./docs
-#          run: make html
-#        - name: Report Coveralls
-#          uses: AndreMiras/coveralls-python-action@develop
+        - name: Build Sphinx
+          working-directory: ./docs
+          run: make html
+        - name: Report Coveralls
+          uses: AndreMiras/coveralls-python-action@develop
 #        - name: Report Codacy
 #          uses: codacy/codacy-coverage-reporter-action@v1
 #          with:
@@ -43,9 +43,9 @@ jobs:
           with:
             password: ${{ secrets.test_pypi_token }}
             repository_url: https://test.pypi.org/legacy/
-#        - name: Upload Github Pages
-#          uses: JamesIves/github-pages-deploy-action@4.1.5
-#          with:
-#            BRANCH: gh-pages # The branch the action should deploy to.
-#            FOLDER: docs/build/html # The folder the action should deploy.
-#            target-folder: test
+        - name: Upload Github Pages
+          uses: JamesIves/github-pages-deploy-action@4.1.5
+          with:
+            BRANCH: gh-pages # The branch the action should deploy to.
+            FOLDER: docs/build/html # The folder the action should deploy.
+            target-folder: test
