--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -28,13 +28,13 @@ jobs:
           run: make html
         - name: Report Coveralls
           uses: AndreMiras/coveralls-python-action@develop
-#        - name: Report Codacy
-#          uses: codacy/codacy-coverage-reporter-action@v1
-#          with:
-#            project-token: ${{ secrets.CODACY_API_TOKEN }}
-#            # or
-#            #api-token: ${{ secrets.CODACY_API_TOKEN }}
-#            coverage-reports: coverage.xml
+        - name: Report Codacy
+          uses: codacy/codacy-coverage-reporter-action@v1
+          with:
+            project-token: ${{ secrets.CODACY_API_TOKEN }}
+            # or
+            #api-token: ${{ secrets.CODACY_API_TOKEN }}
+            coverage-reports: coverage.xml
 #        - name: Deploy Test PyPI
 #          if: github.event_name != 'pull_request'
 #          uses: pypa/gh-action-pypi-publish@master
