--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -31,7 +31,7 @@ jobs:
         - name: Report Codacy
           uses: codacy/codacy-coverage-reporter-action@v1
           with:
-            project-token: ${{ secrets.CODACY_API_TOKEN }}
+            project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
             # or
             #api-token: ${{ secrets.CODACY_API_TOKEN }}
             coverage-reports: coverage.xml
