--- a/.github/workflows/unstable.yml
+++ b/.github/workflows/unstable.yml
@@ -17,7 +17,7 @@ jobs:
           run: git config --global --add safe.directory /__w/${{ github.event.repository.name }}/${{ github.event.repository.name }}
         - uses: actions/checkout@v3
           with:
-            fetch-depth: 0
+            fetch-depth: "0"
         - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
         - name: Build
           run: make build
