--- a/.github/workflows/unstable.yml
+++ b/.github/workflows/unstable.yml
@@ -11,41 +11,14 @@ jobs:
     unstable:
       runs-on: ubuntu-latest
       container:
-        image: apnpucky/ubuntu-pip-lhapdf
+        image: apnpucky/ubuntu-pip:20220726175949
       steps:
-        - name: work around permission issue
-          run: git config --global --add safe.directory /__w/${{ github.event.repository.name }}/${{ github.event.repository.name }}
-        - uses: actions/checkout@v3
+        - uses: APN-Pucky/make-python-action@main
           with:
-            fetch-depth: "0"
-        - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
-        - name: Build
-          run: make build
-        - name: Install
-          run: make install
-        - name: Tests
-          run: make test
-        - name: Build Sphinx
-          working-directory: ./docs
-          run: make html
-        - name: Report Coveralls
-          uses: AndreMiras/coveralls-python-action@develop
-        - name: Report Codacy
-          uses: codacy/codacy-coverage-reporter-action@v1
-          with:
-            project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-            # or
-            #api-token: ${{ secrets.CODACY_API_TOKEN }}
-            coverage-reports: coverage.xml
-        - name: Deploy Test PyPI
-          if: startsWith(github.ref, 'refs/tags') != true
-          uses: pypa/gh-action-pypi-publish@release/v1
-          with:
-            password: ${{ secrets.test_pypi_token }}
-            repository_url: https://test.pypi.org/legacy/
-        - name: Upload Github Pages
-          uses: JamesIves/github-pages-deploy-action@4.1.5
-          with:
-            BRANCH: gh-pages # The branch the action should deploy to.
-            FOLDER: docs/build/html # The folder the action should deploy.
-            target-folder: test
+            test: true
+            doc: true
+            coveralls: true
+            codacy-api-token: ${{ secrets.CODACY_API_TOKEN }}
+            test-pypi-token: ${{ secrets.test_pypi_token }}
+            test-gh-pages: true
+            gh-pages-folder: docs/build/html
