--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -11,40 +11,14 @@ jobs:
     stable:
       runs-on: ubuntu-latest
       container:
-        image: apnpucky/ubuntu-pip-lhapdf
+        image: apnpucky/ubuntu-pip:20220726175949
       steps:
-        - name: work around permission issue
-          run: git config --global --add safe.directory /__w/${{ github.event.repository.name }}/${{ github.event.repository.name }}
-        - uses: actions/checkout@v3
+        - uses: APN-Pucky/make-python-action@main
           with:
-            fetch-depth: 0
-        - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
-        - name: Build 
-          run: make build
-        - name: Install 
-          run: make install
-        - name: Tests
-          run: make test
-        - name: Build Sphinx
-          working-directory: ./docs
-          run: make html
-        - name: Report Coveralls
-          uses: AndreMiras/coveralls-python-action@develop
-        - name: Report Codacy
-          uses: codacy/codacy-coverage-reporter-action@v1
-          with:
-            project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-            # or
-            #api-token: ${{ secrets.CODACY_API_TOKEN }}
-            coverage-reports: coverage.xml
-        - name: Deploy PyPI
-          if: startsWith(github.ref, 'refs/tags')
-          uses: pypa/gh-action-pypi-publish@release/v1
-          with:
-            password: ${{ secrets.pypi_token }}
-        - name: Deploy Github Pages
-          uses: JamesIves/github-pages-deploy-action@4.1.5
-          with:
-            BRANCH: gh-pages # The branch the action should deploy to.
-            FOLDER: docs/build/html # The folder the action should deploy.
-            clean-exclude: test/
+            test: true
+            doc: true
+            coveralls: true
+            codacy-api-token: ${{ secrets.CODACY_API_TOKEN }}
+            pypi-token: ${{ secrets.pypi_token }}
+            gh-pages: true
+            gh-pages-folder: docs/build/html
