Add non-interactive mode and api-key support

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,9 @@
 translator: "GoogleTranslator"
 start: "de"
 goal: "de"
+api_keys:
+  GoogleTranslator: "XXX"
+  DeeplTranslator: "XXX"
 
 flow:
   de:
