--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -12,7 +12,7 @@ jobs:
     devel:
       runs-on: ubuntu-latest
       container:
-        image: apnpucky/ubuntu-pip:20220726175949
+        image: apnpucky/ubuntu-poetry
       steps:
         - uses: APN-Pucky/make-python-action@main
           with:
