--- a/.github/workflows/unstable.yml
+++ b/.github/workflows/unstable.yml
@@ -11,7 +11,7 @@ jobs:
     unstable:
       runs-on: ubuntu-latest
       container:
-        image: apnpucky/ubuntu-pip:20220726175949
+        image: apnpucky/ubuntu-poetry
       steps:
         - uses: APN-Pucky/make-python-action@main
           with:
