--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ sphinx_autobuild = "*"
 sphinx_math_dollar = "*"
 pandoc = "*"
 numpydoc = "*"
-#myst-parser  = "*"
+myst-parser  = "*"
 #smpl = {git = "https://github.com/APN-Pucky/smpl.git", branch = "master"}
 
 [tool.poetry.group.dev]
