--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 minversion = 6.0
-addopts = -v --cov=metamorph --cov-config=.coveragerc --cov-append --line-profile --line-profile-no-print --cov-report=term --cov-report=xml --doctest-modules --profile --profile-svg
+addopts = -v --cov=metamorph --cov-config=.coveragerc --cov-append --cov-report=term --cov-report=xml --doctest-modules
 pytest_plugins = ['pytest_profiling']
