--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.0.0"
 description = "Metamorph text into other reworded text."
 authors = ["Alexander Puck Neuwirth <alexander@neuwirth-informatik.de>"]
 readme = "README.md"
+repository = "https://github.com/APN-Pucky/metamorph"
 
 [tool.poetry.dependencies]
 python = "^3.7"
