--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,17 @@ pyyaml = "*"
 [tool.poetry.scripts]
 metamorph = "metamorph.main:__main__"
 
+
+[tool.poetry.group.test]
+optional = true
+
+[tool.poetry.group.test.dependencies]
+pytest = "*"
+pytest-cov =  "*"
+pytest-profiling =  "*"
+pytest-line-profiler-apn = ">=0.1.3"
+pandas = "*"
+
 [tool.poetry.group.docs]
 optional = true
 
@@ -38,14 +49,9 @@ optional = true
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
-pytest = "*"
-pytest-cov =  "*"
-pytest-profiling =  "*"
-pytest-line-profiler-apn = ">=0.1.3"
 ipython =  "*"
 jupyterlab =  "*"
 jupyter = "*"
-pandas = "*"
 poetry-dynamic-versioning = {extras = ["plugin"], version = "^0.21.1"}
 
 [build-system]
