--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,3 @@
 [pytest]
 minversion = 6.0
-addopts = -v --cov=metamorph --cov-config=.coveragerc --cov-append --cov-report=term --cov-report=xml --doctest-modules
-pytest_plugins = ['pytest_profiling']
+addopts = -Werror -v --cov=metamorph --cov-config=.coveragerc --cov-append --cov-report=term --cov-report=xml --doctest-modules
