--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,3 +67,11 @@ dirty = true
 pattern = '(?x)(?# ignore whitespace)^((?P<epoch>\d+)!)?(?P<base>\d+(\.\d+)*)(?# v1.2.3 or v1!2000.1.2)([-._]?((?P<stage>[a-zA-Z]+)[-._]?(?P<revision>\d+)?))?(?# b0)(\+(?P<tagged_metadata>.+))?$(?# +linux)'
 strict = true
 format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}.{{ distance }}{% endif %}"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+testpaths = ["tests"]
+addopts = [ "-Werror", "-v", "--cov=metamorph", "--cov-config=.coveragerc", "--cov-append", "--cov-report=term", "--cov-report=xml", "--doctest-modules"]
+filterwarnings = [
+    'ignore: pkg_resources is deprecated as an API:DeprecationWarning'
+]
